# DokiModManager

./: .gitignore  LICENSE  README.md  README_backup.md  current_ver.txt  current_ver_beta.txt  deno.json  latest_download.txt  package-lock.json  package.json  unrpyc.sh  vite.config.js
src/: App.vue  Desktop.vue  backup.js  desktop.css  main.js  package-lock.json  package.json  styles.css
src-tauri/: Cargo.toml  deny.toml  tauri.conf.json  unrpyc.sh
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  sub_window.json
src-tauri/icons/: icon.icns
src-tauri/resources/: link_open_redirector.js  update.ps1  update.sh  update_app.sh
src-tauri/src/: discord_rpc.rs  downloader.rs  extractor.rs  hash.rs  lib.rs  main.rs  simple_logger.rs
src-tauri/store/images/: .ddmm.config.json
src-tauri/store/mods/ABND_Days2-3_Revamp_05262019/game/: Day11.rpyc  main_menu.rpyc
src-tauri/store/mods/EverlastingAutumnPrologue-1.0-Renpy8-DDLCMod/EverlastingAutumnPrologue.app/Contents/MacOS/: zsyncmake
src-tauri/store/mods/EverlastingAutumnPrologue-1.0-Renpy8-DDLCMod/renpy/: vc_version.py
src-tauri/store/mods/EverlastingAutumnPrologue-1.0-Renpy8-DDLCMod/renpy/common/: 00action_control.rpyc  00action_other.rpyc  00layout.rpyc  00matrixcolor.rpyc  00matrixtransform.rpyc  00mixers.rpyc  00nvl_mode.rpyc  00textshader.rpyc
src-tauri/store/mods/EverlastingAutumnPrologue-1.0-Renpy8-DDLCMod/renpy/common/_layout/: screen_preferences.rpymc  screen_yesno_prompt.rpymc
src-tauri/store/mods/Exit Music 1.2/game/: screens.rpyc  script.rpyc
src-tauri/store/mods/MayFlowersSweetBeginnings-2.0-Renpy7Mod/renpy/common/: 00accessibility.rpyc  00defaults.rpyc  00layeredimage.rpyc  00library.rpyc  00matrixtransform.rpyc  00voice.rpyc
src-tauri/store/mods/Monika_After_Story-0.12.17-Mod/game/: 0statements.rpyc  event-handler.rpyc  overrides.rpyc  script-affection.rpyc  special-effects.rpyc  sprite-chart.rpyc  zz_consumables.rpyc  zz_hotkey_buttons.rpyc  zz_time.rpyc
src-tauri/store/mods/SNAFU 1.2.0-20251005T155356Z-1-001/: SNAFU Credits.txt
src-tauri/store/mods/TheTrapofAnonymity/TheTrapofAnonymity.app/Contents/: Info.plist
src-tauri/store/mods/TheTrapofAnonymity/lib/py2-linux-x86_64/: pythonw  zsync
src-tauri/store/mods/TheTrapofAnonymity/renpy/common/: 00action_control.rpyc  00action_menu.rpyc  00definitions.rpyc  00gallery.rpyc  00inputvalues.rpyc  00style.rpyc
src-tauri/store/mods/TheTrapofAnonymity/renpy/common/_layout/: screen_main_menu.rpymc
src-tauri/store/mods/jn-1.3.5/game/: keymaps.rpyc  plugins.rpyc  script-headpats.rpyc  script-idles.rpyc  script-nicknames.rpyc  sprite-backend.rpyc
src-tauri/store/mods/jn-1.3.5/game/cache/: bytecode.rpyb
src/assets/Translations/: TranslationTable.json  Translations.json
src/core/: ImageUtils.js  Launchers.js  Translation.js  VersionHandler.js  WebviewWindowHelper.js
src/workers/: ImageLoader.js
