[package]
name = "dokimodmanager"
version = "1.4.0"
description = "(Kunzite) Doki Doki Mod Manager"
authors = ["kunzite"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dokimodmanager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-dialog = "0.1.1"
tauri-plugin-fs-pro = "2.4.0"
tauri-plugin-dialog = "2"
tauri-plugin-fs = { version = "2", features = ["watch"] }
unrar = "0.5.8"
zip = "5.1.1"
sysinfo = "0.37.1"
regex = "1.11.3"
tokio = { version = "1", features = ["full"] }
window-vibrancy = "0.6.0"
discord-rpc-client = "0.4.0"
reqwest = "0.12.23"
tokio-util = "0.7.16"
rand = "0.8.5"
rfd = "0.15.4"
whoami = "1.6.1"
hex = "0.4.3"
sha2 = "0.10.9"
open = "5.3.2"
image = "0.24.9"
tauri-plugin-aptabase = "1.0.0"
unrpa_rs = "0.4.1"
warpalib = "0.3.1"
flate2 = "1.1.8"
serde-pickle = "1.2.0"
dirs = "6.0.0"
walkdir = "2.5.0"
rayon = "1.11.0"

