[package]
name = "dokimodmanager"
version = "1.7.0"
description = "(Kunzite) Doki Doki Mod Manager"
authors = ["bkunzite"]
edition = "2021"
license = "Apache-2.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
debug = false
debug-assertions = false
strip = true

[lib]
name = "dokimodmanager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "*"
tauri-plugin-fs = { version = "2", features = ["watch"] }
unrar = "0.5.8"
zip = "5.1.1"
sysinfo = "0.37.1"
regex = "1.11.3"
tokio = { version = "1", features = ["full"] }
window-vibrancy = "0.6.0"
discord-rpc-client = "0.4.0"
reqwest = { version = "0.12.28", features = ["stream"] }
rand = "0.9.4"
hex = "0.4.3"
sha2 = "0.10.9"
open = "5.3.2"
tauri-plugin-aptabase = "1.0.0"
warpalib = "0.3.1"
dirs = "6.0.0"
rayon = "1.11.0"
jwalk = "0.8.1"
gethostname = "1.1.0"
include_dir = "0.7.4"
futures-util = "0.3.32"
tauri-plugin-fs-pro = "2.4.0"

